[gd_scene load_steps=4 format=3 uid="uid://bhlp6uike2k0b"]

[ext_resource type="Script" path="res://scripts/Textbox.gd" id="1_uhbrl"]
[ext_resource type="Texture2D" uid="uid://csgilhrbitqqt" path="res://assets/sprites/text_box2.png" id="2_sq26p"]
[ext_resource type="FontFile" uid="uid://c6w4aeq1v7lik" path="res://assets/fonts/Super Shiny.ttf" id="3_5irbv"]

[node name="Textbox" type="MarginContainer"]
z_index = 15
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_uhbrl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("2_sq26p")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_right = 8

[node name="Label" type="Label" parent="MarginContainer"]
light_mask = 2
visibility_layer = 2
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_5irbv")
vertical_alignment = 1

[node name="LetterDisplay" type="Timer" parent="."]
one_shot = true

[node name="GoneTimer" type="Timer" parent="."]
wait_time = 2.0

[connection signal="timeout" from="LetterDisplay" to="." method="_on_letter_display_timeout"]
[connection signal="timeout" from="GoneTimer" to="." method="_on_gone_timer_timeout"]
